Refactor: Simplifica estrutura do projeto para deploy

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,14 @@
 {
   "builds": [
     {
-      "src": "/api/main.py",
+      "src": "app.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/api/main.py"
+      "dest": "app.py"
     }
   ]
 }
