--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
+  "version": 2,
   "builds": [
+    {
+      "src": "static/**/*",
+      "use": "@vercel/static"
+    },
     {
       "src": "app.py",
       "use": "@vercel/python"
